force-app/main/default/objects/Survey__c/fields/Currently_Work_At_Bitwise__c.field-meta.xml
<CustomField>
    <fullName>Currently_Work_At_Bitwise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Do you currently work at Bitwise Industries?</inlineHelpText>
    <label>Currently Work At Bitwise</label>
    <type>Checkbox</type>
</CustomField>