force-app/main/default/objects/Survey__c/fields/Currently_Work_From_Home__c.field-meta.xml
<CustomField>
    <fullName>Currently_Work_From_Home__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data if working from home</description>
    <label>Currently Work From Home?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>