force-app/main/default/objects/Survey__c/fields/Decline_Apprentice_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Apprentice_Reason__c</fullName>
    <description>Created By: TL
Business Unit: WFT
Purpose: For Form Assembly</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please share your top reason for not participating in the Bitwise apprenticeship program.</inlineHelpText>
    <label>Decline Apprentice Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>