force-app/main/default/objects/Survey__c/fields/Developing_a_Start_up__c.field-meta.xml
<CustomField>
    <fullName>Developing_a_Start_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: VC
Purpose: Is the person developing a start-up company</description>
    <inlineHelpText>Are you currently developing a ʺstart‐upʺ company?</inlineHelpText>
    <label>Developing a Start-up</label>
    <type>Checkbox</type>
</CustomField>