force-app/main/default/objects/Survey__c/fields/Disabilities_Requiring_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Disabilities_Requiring_Accommodations__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual has any disabilities requiring reasonable accommodation to better design classes and support services</description>
    <inlineHelpText>Do they have a disability requiring reasonable accommodation?</inlineHelpText>
    <label>Disabilities Requiring Accommodations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory Difficulty</fullName>
            </value>
            <value>
                <fullName>Cognitive Difficulty</fullName>
            </value>
            <value>
                <fullName>Hearing Difficulty</fullName>
            </value>
            <value>
                <fullName>Independent Living Difficulty</fullName>
            </value>
            <value>
                <fullName>Learning Difficulty</fullName>
            </value>
            <value>
                <fullName>Self-Care Difficulty</fullName>
            </value>
            <value>
                <fullName>Vision Difficulty</fullName>
            </value>
            <value>
                <fullName>No, I do not have any disability requiring reasonable accommodations in class</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>