force-app/main/default/objects/Survey__c/fields/Disabled_Elderly_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Elderly_Caregiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Purpose: Capture if the individual is the primary caregiver of a disabled or elderly family member</description>
    <inlineHelpText>Are they the primary caregiver of a disabled or elderly family member?</inlineHelpText>
    <label>Disabled/Elderly Caregiver?</label>
    <type>Checkbox</type>
</CustomField>