force-app/main/default/objects/Survey__c/fields/Do_You_Belong_To_A_Disadvantage_Group__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Belong_To_A_Disadvantage_Group__c</fullName>
    <description>GS
For WFT Survey Reportability</description>
    <label>Do You Belong To A Disadvantage Group?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>