force-app/main/default/objects/Survey__c/fields/Do_You_Belong_To_Any_Of_These_Groups__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Belong_To_Any_Of_These_Groups__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>The group the student feels they belong to.</inlineHelpText>
    <label>Do You Belong To Any Of These Groups?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English language learner</fullName>
            </value>
            <value>
                <fullName>Child of an immigrant</fullName>
            </value>
            <value>
                <fullName>Formerly incarcerated</fullName>
            </value>
            <value>
                <fullName>Struggle with secure, stable housing</fullName>
            </value>
            <value>
                <fullName>Long-term unemployed (you have been looking for work for 27 weeks or longer)</fullName>
            </value>
            <value>
                <fullName>Seasonal farmworker</fullName>
            </value>
            <value>
                <fullName>Military spouse</fullName>
            </value>
            <value>
                <fullName>U.S. military veteran</fullName>
            </value>
            <value>
                <fullName>Single parent</fullName>
            </value>
            <value>
                <fullName>Under-employed or unemployed family caregiver (you are struggling to find paid Work outside the home due to time out of work and/or caregiving responsibilities)</fullName>
            </value>
            <value>
                <fullName>Youth in or aged out of foster care</fullName>
            </value>
            <value>
                <fullName>No, I do not belong to any of these groups</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>