force-app/main/default/objects/Survey__c/fields/Do_You_Have_A_Disability__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_A_Disability__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>Does this student have a disability?</inlineHelpText>
    <label>Do You Have A Disability?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>