force-app/main/default/objects/Survey__c/fields/Employed_Industry__c.field-meta.xml
<CustomField>
    <fullName>Employed_Industry__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>If you are employed, what industry are you currently employed in?</inlineHelpText>
    <label>Employed Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self‐employed in own business or professional non‐group practice</fullName>
            </value>
            <value>
                <fullName>For‐profit corporation/company/group‐practice</fullName>
            </value>
            <value>
                <fullName>Government or other public institution or agency, including military</fullName>
            </value>
            <value>
                <fullName>Non‐profit organization, institution or NGO (e.g., arts/human services/international organizations)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>