force-app/main/default/objects/Survey__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Which describes your current employment situation?</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apprenticeship/Internship</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Self employed</fullName>
            </value>
            <value>
                <fullName>Full time employment</fullName>
            </value>
            <value>
                <fullName>Part time employment</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Not seeking work</fullName>
            </value>
            <value>
                <fullName>Unemployed but actively looking for work</fullName>
            </value>
            <value>
                <fullName>Unemployed not seeking work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>