force-app/main/default/objects/Survey__c/fields/Enjoy_Networking__c.field-meta.xml
<CustomField>
    <fullName>Enjoy_Networking__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data if they enjoy networking</description>
    <label>Enjoy Networking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>