force-app/main/default/objects/Survey__c/fields/Exclude_From_Flow__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Flow__c</fullName>
    <description>GS
Purpose: Checks if the Survey is an Apprentice Survey with the Status Completed or if the Survey is a WFT Student Survey whose Class End Date + 1 is less than Today.</description>
    <formula>OR( 
    AND(RecordType.DeveloperName = &quot;WFT_Student_Surveys&quot; ,   
        TODAY() &gt;  Registration__r.Class_End_Date__c + 1, 
        Registration__r.Dropped__c = False,  
        Registration__r.Dropped_w_Credit__c = False),
    AND(RecordType.DeveloperName = &quot;Apprentice_Survey&quot; , 
        ISPICKVAL( Status__c , &quot;Completed&quot;) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude From Flow</label>
    <type>Checkbox</type>
</CustomField>