force-app/main/default/objects/Survey__c/fields/First_Generation__c.field-meta.xml
<CustomField>
    <fullName>First_Generation__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Display survey data
Populated: Auto via survey / manual</description>
    <inlineHelpText>Is this person a first-generation American?</inlineHelpText>
    <label>First Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>