force-app/main/default/objects/Survey__c/fields/First_generation_American__c.field-meta.xml
<CustomField>
    <fullName>First_generation_American__c</fullName>
    <description>GS
Business: WFT
Purpose: For WFT Student Survey. Checks if the field is selected in Applicable Groups multiselect picklist.</description>
    <formula>INCLUDES( Applicable_Groups__c, &quot;First-generation American&quot;)</formula>
    <label>First-generation American</label>
    <type>Checkbox</type>
</CustomField>