force-app/main/default/objects/Survey__c/fields/Formerly_Incarcerated__c.field-meta.xml
<CustomField>
    <fullName>Formerly_Incarcerated__c</fullName>
    <description>GS
Business: WFT
Purpose: For WFT Student Survey. Checks if the field is selected in Applicable Groups multiselect picklist.</description>
    <formula>INCLUDES(Applicable_Groups__c, &quot;Formerly Incarcerated&quot;)</formula>
    <label>Formerly Incarcerated</label>
    <type>Checkbox</type>
</CustomField>