force-app/main/default/objects/Survey__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Display survey data
Populated: Auto via survey / manual</description>
    <inlineHelpText>How does this person identify their gender?</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Transmale</fullName>
            </value>
            <value>
                <fullName>Transfemale</fullName>
            </value>
            <value>
                <fullName>Genderqueer/Gender Non-conforming</fullName>
            </value>
            <value>
                <fullName>Prefer to Self-Describe (use field below)</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>