force-app/main/default/objects/Survey__c/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Display survey data
Populated: Auto via survey / manual</description>
    <inlineHelpText>How does this person identify their gender?</inlineHelpText>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender_Identity</valueSetName>
    </valueSet>
</CustomField>