force-app/main/default/objects/Survey__c/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Business Unit: WFT</description>
    <inlineHelpText>Does your employer provide health insurance for you and your dependents?</inlineHelpText>
    <label>Health Insurance</label>
    <type>Checkbox</type>
</CustomField>