force-app/main/default/objects/Survey__c/fields/Highest_Education_Completed__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_Completed__c</fullName>
    <description>Created by: JA
Purpose: Capture an individual&apos;s highest level of educational attainment to better design classes and support services</description>
    <inlineHelpText>What is their highest level of educational attainment/degree completion?</inlineHelpText>
    <label>Highest Education Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education</valueSetName>
    </valueSet>
</CustomField>