force-app/main/default/objects/Survey__c/fields/Home_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Home_Amenities__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data on home amenities.</description>
    <label>Home Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Hotspot</fullName>
            </value>
            <value>
                <fullName>Access to Zoom Account for Large Meetings</fullName>
            </value>
            <value>
                <fullName>Virtual Accountability Cafe (Allows for a virtual space to work and take breaks together)</fullName>
            </value>
            <value>
                <fullName>Monthly Snack Box</fullName>
            </value>
            <value>
                <fullName>Outdoor Coworking Spaces</fullName>
            </value>
            <value>
                <fullName>Virtual Weekly Yoga Session</fullName>
            </value>
            <value>
                <fullName>Virtual &quot;Grab A Drink&quot; Event</fullName>
            </value>
            <value>
                <fullName>Virtual Networking Events</fullName>
            </value>
            <value>
                <fullName>Virtual Workshops (Resume, Skills, Craft)</fullName>
            </value>
            <value>
                <fullName>Virtual Events (Scavenger, Trivia, Raffles)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>