force-app/main/default/objects/Survey__c/fields/How_Often_Do_You_Use_The_Skills_Taught__c.field-meta.xml
<CustomField>
    <fullName>How_Often_Do_You_Use_The_Skills_Taught__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>How often does the student use skills professionally that they were taught by Bitwise/Geekwise courses.</inlineHelpText>
    <label>How Often Do You Use The Skills Taught?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>