force-app/main/default/objects/Survey__c/fields/How_Satisfied_Are_You_With_Your_Life__c.field-meta.xml
<CustomField>
    <fullName>How_Satisfied_Are_You_With_Your_Life__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>How satisfied is the student with their life currently.</inlineHelpText>
    <label>How Satisfied Are You With Your Life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfaction_Rating</valueSetName>
    </valueSet>
</CustomField>