force-app/main/default/objects/Survey__c/fields/HS_Diploma__c.field-meta.xml
<CustomField>
    <fullName>HS_Diploma__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays survey data
Populated: Auto via survey / manual</description>
    <inlineHelpText>Has this person received their high school diploma?</inlineHelpText>
    <label>HS Diploma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>