force-app/main/default/objects/Survey__c/fields/Improve_Apprenticeship_Experience_Reason__c.field-meta.xml
<CustomField>
    <fullName>Improve_Apprenticeship_Experience_Reason__c</fullName>
    <description>Created by: RS
Business Purpose: Field used for apprenticeship survey build.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Improve Apprenticeship Experience Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>