force-app/main/default/objects/Survey__c/fields/Improve_Priority_One__c.field-meta.xml
<CustomField>
    <fullName>Improve_Priority_One__c</fullName>
    <description>Created By: RS
Business Purpose: Apprenticeship survey build.</description>
    <label>Improve Priority One</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>