force-app/main/default/objects/Survey__c/fields/Improve_Priority_Two__c.field-meta.xml
<CustomField>
    <fullName>Improve_Priority_Two__c</fullName>
    <description>Created By: RS
Business Purpose: Apprenticeship survey</description>
    <label>Improve Priority Two</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>