force-app/main/default/objects/Survey__c/fields/Initiate_Conversations__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Conversations__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data if they initiate conversations</description>
    <label>Initiate Conversations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>