force-app/main/default/objects/Survey__c/fields/Interested_in_Apprenticeship__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Apprenticeship__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual is interested in an apprenticeship to better design classes and support services.</description>
    <inlineHelpText>Are they interested in joining our apprenticeship program?</inlineHelpText>
    <label>Interested in Apprenticeship?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>