force-app/main/default/objects/Survey__c/fields/Internet_Access_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Internet_Access_Explanation__c</fullName>
    <description>Created by: JA
Purpose: Capture how an individual accesses the internet if they replied Other to, &quot;Do you have consistent and reliable access to a high-speed internet connection at home? (If you choose &apos;Other,&apos; please share in the next section.)&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If they replied Other to having consistent and reliable high-speed internet access, how do they access the internet?</inlineHelpText>
    <label>Internet Access Explanation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>