force-app/main/default/objects/Survey__c/fields/Job_Industry__c.field-meta.xml
<CustomField>
    <fullName>Job_Industry__c</fullName>
    <description>GS
Business Unit: WFT
Purpose: In which job industry do they work in.</description>
    <label>Job Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupation_Industry</valueSetName>
    </valueSet>
</CustomField>