force-app/main/default/objects/Survey__c/fields/Last_Send_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Last_Send_Date_Only__c</fullName>
    <description>GS
Business Unit: WFT Survey
Purpose: To retrieve just the date of the Last Sent Date field for Email Template Purposes.</description>
    <formula>DATEVALUE( Last_Sent_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Send Date Only</label>
    <type>Date</type>
</CustomField>