force-app/main/default/objects/Survey__c/fields/Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_Date__c</fullName>
    <description>GS
Business Unit: WFT
Purpose: Shows the last date and time that a Survey was sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Sent Date</label>
    <type>DateTime</type>
</CustomField>