force-app/main/default/objects/Survey__c/fields/Lead_a_Discussion_On__c.field-meta.xml
<CustomField>
    <fullName>Lead_a_Discussion_On__c</fullName>
    <label>Lead a Discussion On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Starting a Business</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Resume/Cover letters</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
            <value>
                <fullName>Construction/Manufacturing</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Time Management</fullName>
            </value>
            <value>
                <fullName>Microsoft Office Suite</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Photography/Videography</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Finances</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>