force-app/main/default/objects/Survey__c/fields/Leading_Discussions__c.field-meta.xml
<CustomField>
    <fullName>Leading_Discussions__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data if interested in Leading Discussions</description>
    <label>Leading Discussions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>