force-app/main/default/objects/Survey__c/fields/Location_Of_Bitwise_Geekwise_Course__c.field-meta.xml
<CustomField>
    <fullName>Location_Of_Bitwise_Geekwise_Course__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <label>Location Of Bitwise/Geekwise Course</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Have not taken Bitwise/Geekwise Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>