force-app/main/default/objects/Survey__c/fields/Marketing_Feature_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Feature_Opt_in__c</fullName>
    <description>Created by: MA
Business unit: WFT
Purpose: captures if an individual is open to being featured in Bitwise marketing campaign</description>
    <label>Marketing Feature Opt-in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>