force-app/main/default/objects/Survey__c/fields/My_Experience_Changed_My_Career_Ideas__c.field-meta.xml
<CustomField>
    <fullName>My_Experience_Changed_My_Career_Ideas__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>The Students experience at Bitwise/Geekwise changed the course of their career and professional life</inlineHelpText>
    <label>My Experience Changed My Career Ideas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Rating</valueSetName>
    </valueSet>
</CustomField>