force-app/main/default/objects/Survey__c/fields/Not_likely_BW_Apprenticeship_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_likely_BW_Apprenticeship_Reason__c</fullName>
    <description>Created By: RS
Business Purpose: Field used for Apprenticeship survey to capture &apos;not likely&apos; value reason.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Not likely BW Apprenticeship Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>