force-app/main/default/objects/Survey__c/fields/Not_likely_BW_Class_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_likely_BW_Class_Reason__c</fullName>
    <description>TL
Purpose: For apprentice survey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please share your reason(s) for why you are not likely to recommend Bitwise classes to others.</inlineHelpText>
    <label>Not likely BW Class Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>