force-app/main/default/objects/Survey__c/fields/Num_of_Children_In_Home_Under_18__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Children_In_Home_Under_18__c</fullName>
    <description>Created by: JA
Purpose: Capture the number of children an individual has in their home under the age of 17.</description>
    <inlineHelpText>How many kids 17 years old or younger currently live with them in their home?</inlineHelpText>
    <label># of Children In Home Under 18</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>