force-app/main/default/objects/Survey__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture occupation information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>